--- a/css/CssStyle.css
+++ b/css/CssStyle.css
@@ -1,15 +1,16 @@
 <head>
 <style>
 body {
-    background-color: black;
+    background-color: #000000;
 }
 
 h1 {
-    color: cyan;
+    color: white;
     text-align: center;
 }
 
 p {
+    color: white;
     font-family: arial;
     font-size: 28px;
 }
