font size/shape/loc

--- a/css/CssStyle.css
+++ b/css/CssStyle.css
@@ -11,8 +11,9 @@ h1 {
 
 p {
     color: white;
-    font-family: arial;
-    font-size: 28px;
+    font-family: verdana;
+    font-size: 18px;
+	text-align: center;
 }
 </style>
 </head>
