--- a/css/CssStyle.css
+++ b/css/CssStyle.css
@@ -1,13 +1,12 @@
+<html>
 <head>
 <style>
 html{
-    background: #000001;
 	background-color: #000010;
-	
 }
 
 body{
-
+    background-color: #000010;
 }
 
 h1 {
@@ -24,7 +23,7 @@ p {
 }
 </style>
 </head>
-
+</html>
 
 
 
