--- a/css/CssStyle.css
+++ b/css/CssStyle.css
@@ -26,6 +26,18 @@ p {
     font-size: 18px;
 	text-align: center;
 }
+
+/*For Horizontal Navigation Bar*/
+u1{
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+li {
+    display: inline;
+}
+/***********************/
 </style>
 </head>
 </html>
