--- a/css/CssStyle.css
+++ b/css/CssStyle.css
@@ -10,7 +10,7 @@ html{
 body{
     background-color: #000010;
 	background-image: url("../FbP.jpg");
-	background-size: 100px 100px;
+	background-position: left top;
     background-repeat: no-repeat;
 }
 /**********************************************/
