--- a/css/CssStyle.css
+++ b/css/CssStyle.css
@@ -7,12 +7,7 @@ html{
 	background-color: #000010;
 }
 
-.background{
-width: 12%;
-height: 25px;
-background-image: url("../FbP.jpg");
-background-size: 100% 100%;
-}
+
 
 body{
     background-color: #000010;
@@ -23,8 +18,12 @@ body{
 /**********************************************/
 
 div{
-  height:70px;
-  width: 10%;
+  background-image:url("../FbP.jpg");
+  padding:5px;
+  width:150px;
+  height:200px;
+  border:1px solid black;
+
 }
 
 h1 {
