--- a/css/CssStyle.css
+++ b/css/CssStyle.css
@@ -7,23 +7,23 @@ html{
 	background-color: #000010;
 }
 
-
-
 body{
     background-color: #000010;
-	background-image: url("../FbP.jpg");
-	background-position: left top;
-    background-repeat: no-repeat;
 }
 /**********************************************/
 
 div{
-  background-image:url("../FbP.jpg");
-  padding:5px;
-  width:150px;
-  height:200px;
-  border:1px solid black;
+ /* background:url("../FbP.jpg");
+  background-size: 30% 100px;
+  background-repeat:no-repeat;
+  padding:5px;*/
 
+
+}
+img.center{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 h1 {
@@ -44,10 +44,25 @@ u1{
   list-style-type: none;
   margin: 0;
   padding: 0;
+  overflow: hidden;
+  background-color: #fff929;
 }
 
 li {
+    float: left;
     display: inline;
+}
+
+li a{
+  display: block;
+  color: #ffffff;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover{
+  background-color: #000000;
 }
 /***********************/
 </style>
