--- a/css/CssStyle.css
+++ b/css/CssStyle.css
@@ -18,7 +18,6 @@ div{
   background-repeat:no-repeat;
   padding:5px;*/
 
-
 }
 img.center{
   display: block;
@@ -29,6 +28,7 @@ img.center{
 h1 {
     color: white;
 	background-color: #787878;
+	display: block;
     text-align: center;
 }
 
@@ -41,6 +41,9 @@ p {
 
 /*For Horizontal Navigation Bar*/
 u1{
+  position: fixed;
+  top: 0;
+  width: 100%;
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -63,6 +66,10 @@ li a{
 
 li a:hover{
   background-color: #000000;
+}
+
+.active{
+  background-color: #09ddec;
 }
 /***********************/
 </style>
