--- a/css/CssStyle.css
+++ b/css/CssStyle.css
@@ -57,6 +57,19 @@ p {
     font-size: 18px;
 	text-align: center;
 }
+/*Test p2*/
+p2 {
+
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+	
+    color: white;
+    font-family: verdana;
+    font-size: 18px;
+	text-align: left;
+}
+
 
 p a:link{
   color: #46f1e1;
